@@ -15,7 +15,7 @@
 #      along with this program; if not, write to the Free Software
 #      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
 #   
-# $Id: KickStart.py,v 1.8 2001/07/09 20:38:40 drew Exp $
+# $Id: KickStart.py,v 1.1.1.1 2001/08/05 14:59:37 drew_csillag Exp $
 # Time-stamp: <01/05/03 18:32:41 smulloni>
 ########################################################################
 
@@ -24,7 +24,7 @@ import ConfigLoader
 CONFIG_MODULE='SkunkWeb.Configuration'
 
 CONFIG_STRING="""
-from SkunkWeb.ConfigAdditives import Location, Host, Port, Scope
+from SkunkWeb.ConfigAdditives import Location, Host, Port, Scope, IP, UNIXPath
 from SkunkWeb.constants import *
 """
 
@@ -36,6 +36,10 @@ ConfigLoader.loadConfigString(CONFIG_STRING,
 
 ########################################################################
 # $Log: KickStart.py,v $
+# Revision 1.1.1.1  2001/08/05 14:59:37  drew_csillag
+# take 2 of import
+#
+#
 # Revision 1.8  2001/07/09 20:38:40  drew
 # added licence comments
 #
